--- a/newserver/.env
+++ b/newserver/.env
@@ -1,5 +1,5 @@
-DB_HOST=main-1.c34qqac0y2dg.us-east-1.rds.amazonaws.com
-DB_USER=admin
-DB_PASSWORD=GuRutekipass13$$
-DB_NAME=main
-DB_PORT=3306
+DB_HOST='main-1.c34qqac0y2dg.us-east-1.rds.amazonaws.com'
+DB_USER='admin'
+DB_PASSWORD='GuRutekipass13$$'
+DB_NAME='main'
+DB_PORT='3306'
