--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,46 +10,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the code from the repository
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      # Step 1: Checkout the code from the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          submodules: false  # Set to true if you have properly configured submodules
 
-    # Step 2: Set up AWS credentials using GitHub Secrets
-    - name: Set up AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1  # Ensure this is the correct AWS region
+      # Step 2: Set up AWS credentials using GitHub Secrets
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Replace with your AWS region
 
-    # Step 3: Install AWS CLI using pip (alternative method)
-    - name: Install AWS CLI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-pip
-        sudo pip3 install awscli --upgrade --user
+      # Step 3: Install AWS CLI using pip3
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install awscli --upgrade --user
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          aws --version  # Verify installation
 
-    # Step 4: Set up SSH using the private key stored in GitHub secrets
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+      # Step 4: Set up SSH using the private key stored in GitHub secrets
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
-    # Step 5: Test SSH connection
-    - name: Test SSH Connection
-      run: |
-        ssh -vT -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }}
+      # Step 5: Test SSH connection (optional but recommended)
+      - name: Test SSH Connection
+        run: |
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} 'echo "SSH connection successful"'
 
-    # Step 6: Deploy to EC2 instance
-    - name: Deploy to EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no -i ${{ secrets.EC2_SSH_PRIVATE_KEY }} ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-          cd /home/ec2-user/newserver  # Update this path if necessary
-          git pull origin main
-          npm install
-          pm2 restart server.js  # Restart the app with PM2
-        EOF
+      # Step 6: Deploy to EC2 instance
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+            cd /home/ec2-user/newserver  # Update this path if necessary
+            git pull origin main
+            npm install
+            pm2 restart server.js  # Restart the app with PM2
+          EOF
 
-    # Step 7: Set output to indicate successful deployment (fix for deprecated set-output)
-    - name: Set output to indicate successful deployment
-      run: echo "DEPLOYMENT_STATUS=SUCCESS" >> $GITHUB_ENV
+      # Step 7: Set deployment status using environment files
+      - name: Set Deployment Status
+        run: echo "DEPLOYMENT_STATUS=SUCCESS" >> $GITHUB_ENV
