--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code from the repository
+      # Step 1: Checkout the code from the repository without submodules
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            cd /home/ec2-user/newserver  # Update this path if necessary
+            cd /home/ec2-user/newserver1  # Update this path if necessary
             git pull origin main
             npm install
             pm2 restart server.js  # Restart the app with PM2
