--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -42,13 +42,13 @@ jobs:
       # Step 5: Test SSH connection (optional but recommended)
       - name: Test SSH Connection
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} 'echo "SSH connection successful"'
+          ssh -vvv -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} 'echo "SSH connection successful"'
 
       # Step 6: Deploy to EC2 instance
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            cd /home/ec2-user/newserver1  # Update this path if necessary
+            cd /home/ec2-user/newserver1/newserver  # Update this path if necessary
             git pull origin main
             npm install
             pm2 restart server.js  # Restart the app with PM2
