--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -19,10 +19,14 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd newserver
+        npm install
 
     - name: Build app
-      run: npm run build
+      run: |
+        cd newserver
+        npm run build
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
