--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -34,4 +34,4 @@ jobs:
           app-name: maindb
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./newserver # Ensures the contents of 'newserver' are deployed to root
+          package: . # Deploy the entire repository, including 'newserver' directory
