--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -16,17 +16,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20' # Ensure this matches Azure's Node.js version
+          node-version: '20' # Updated to match Azure's Node.js version
 
       - name: Install dependencies
         run: |
           cd newserver
           npm install
-
-      - name: Rebuild native modules
-        run: |
-          cd newserver
-          npm rebuild bcrypt --build-from-source
 
       - name: Build app
         run: |
@@ -39,4 +34,4 @@ jobs:
           app-name: maindb
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./newserver # Deploys contents directly to root
+          package: . # Deploys the entire repository, including 'newserver' directory
