--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20' # Updated to match Azure's Node.js version
+          node-version: '20' # Ensure this matches Azure's Node.js version
 
       - name: Install dependencies
         run: |
@@ -39,4 +39,4 @@ jobs:
           app-name: maindb
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./newserver # Deploys contents of 'newserver' directly to root
+          package: ./newserver # Deploys contents of 'newserver' directory directly to root
