--- a/newserver/.env
+++ b/newserver/.env
@@ -4,3 +4,4 @@ DB_PASSWORD='GuRutekipass13$$'
 DB_NAME='main'
 DB_PORT='3306'
 JWT_SECRET_KEY='eleven'
+RECIPIENT_EMAIL="david@murrayhillwebdesign.com"
