--- a/newserver/package.json
+++ b/newserver/package.json
@@ -69,6 +69,7 @@
     "function-bind": "^1.1.2",
     "generate-function": "^2.3.1",
     "get-intrinsic": "^1.2.6",
+    "google-auth-library": "^9.15.0",
     "gopd": "^1.2.0",
     "has-flag": "^4.0.0",
     "has-property-descriptors": "^1.0.2",
@@ -158,7 +159,6 @@
     "ws": "^8.17.1",
     "xtend": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "build": "echo \"No build step required\"",
