--- a/newserver/package.json
+++ b/newserver/package.json
@@ -146,6 +146,7 @@
     "statuses": "^2.0.1",
     "streamsearch": "^1.1.0",
     "string_decoder": "^1.1.1",
+    "stripe": "^17.5.0",
     "supports-color": "^7.2.0",
     "toidentifier": "^1.0.1",
     "type-is": "^1.6.18",
