--- a/newserver/.env
+++ b/newserver/.env
@@ -5,3 +5,5 @@ DB_NAME='main'
 DB_PORT='3306'
 JWT_SECRET_KEY='eleven'
 RECIPIENT_EMAIL="david@murrayhillwebdesign.com"
+
+STRIPE_WEBHOOK_SECRET='whsec_EuJckLrh02xAdF92LwPhkhqV4fvrw898'
