--- a/newserver/package.json
+++ b/newserver/package.json
@@ -157,6 +157,7 @@
     "util-deprecate": "^1.0.2",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
+    "winston": "^3.17.0",
     "ws": "^8.17.1",
     "xtend": "^4.0.2"
   },
