--- a/newserver/package.json
+++ b/newserver/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "accepts": "^1.3.8",
     "ansi-styles": "^4.3.0",
     "append-field": "^1.0.0",
