--- a/newserver/.env
+++ b/newserver/.env
@@ -7,3 +7,19 @@ JWT_SECRET_KEY='eleven'
 RECIPIENT_EMAIL="david@murrayhillwebdesign.com"
 
 STRIPE_WEBHOOK_SECRET='whsec_EuJckLrh02xAdF92LwPhkhqV4fvrw898'
+
+
+
+# Bot Framework Configuration
+BOT_APP_ID=your_bot_app_id         # Application (client) ID of your bot from Azure
+BOT_APP_PASSWORD=your_bot_app_password # Client secret of your bot from Azure
+BOT_ENDPOINT=https://maindb-a2dugpdndze5d9br.canadacentral-01.azurewebsites.net/api/messages
+
+# Microsoft Teams Integration
+TEAMS_APP_ID=your_teams_app_id       # Teams app ID for integration
+TEAMS_APP_PASSWORD=your_teams_app_password # Teams app password or secret
+TEAMS_TENANT_ID=your_azure_tenant_id # Tenant ID for the organization (if applicable)
+
+# Bot Conversation History (optional, for debugging and logging purposes)
+BOT_STORAGE_CONNECTION_STRING=your_azure_storage_connection_string # If you're using Azure Blob/Table storage
+BOT_STORAGE_CONTAINER_NAME=bot-conversations # Name of the storage container/table for conversation history
