--- a/newserver/package.json
+++ b/newserver/package.json
@@ -149,6 +149,7 @@
     "stripe": "^17.5.0",
     "supports-color": "^7.2.0",
     "toidentifier": "^1.0.1",
+    "twilio": "^5.4.0",
     "type-is": "^1.6.18",
     "typedarray": "^0.0.6",
     "uid-safe": "^2.1.5",
