--- a/newserver/package.json
+++ b/newserver/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "@sendgrid/mail": "^8.1.4",
     "accepts": "^1.3.8",
     "ansi-styles": "^4.3.0",
@@ -70,6 +71,7 @@
     "generate-function": "^2.3.1",
     "get-intrinsic": "^1.2.6",
     "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "gopd": "^1.2.0",
     "has-flag": "^4.0.0",
     "has-property-descriptors": "^1.0.2",
@@ -112,6 +114,7 @@
     "mysql2": "^3.11.5",
     "named-placeholders": "^1.1.3",
     "negotiator": "^0.6.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.3",
@@ -160,7 +163,8 @@
     "vary": "^1.1.2",
     "winston": "^3.17.0",
     "ws": "^8.17.1",
-    "xtend": "^4.0.2"
+    "xtend": "^4.0.2",
+    "ytdl-core": "^4.11.5"
   },
   "scripts": {
     "start": "node server.js",
