--- a/newserver/package.json
+++ b/newserver/package.json
@@ -120,6 +120,7 @@
     "object-inspect": "^1.13.3",
     "on-finished": "^2.4.1",
     "on-headers": "^1.0.2",
+    "p-limit": "^6.2.0",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.12",
     "process-nextick-args": "^2.0.1",
