--- a/newserver/package.json
+++ b/newserver/package.json
@@ -61,6 +61,7 @@
     "etag": "^1.8.1",
     "express": "^4.21.2",
     "express-mysql-session": "^3.0.3",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "filelist": "^1.0.4",
     "finalhandler": "^1.3.1",
